syntax = "proto3";

package wfa.measurement.internal.kingdom;

option java_package = "org.wfanet.measurement.internal.kingdom";
option java_multiple_files = true;

enum RequisitionState {
  REQUISITION_STATE_UNKNOWN = 0;
  UNFULFILLED = 1;
  FULFILLED = 2;
}
